testdata/invalid/internal/handler/http/user_handler.go
package http

import _ "github.com/kimtaeyun/testproject-invalid/internal/infra/postgres"

func Handle() {}
